# CMS

./: README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  admin.py  auth.py  dependencies.py  faculty.py  students.py
backend/app/core/: config.py
frontend/app/: globals.css  layout.tsx
frontend/app/admin/: page.tsx
frontend/app/faculty/: page.tsx
frontend/app/lib/: api.ts
frontend/app/register/: page.tsx
frontend/app/student/: page.tsx
